<resources>
    <string name="app_name">Thought Board DUCS</string>
    <string name="new_message">Create New Message</string>
    <string name="about_us">About Us</string>
    <string name="home_screen_menu">Home Screen Menu</string>
    <string name="todo">TODO</string>
    <string name="thought_board">Thought Board</string>
    <string name="ducs">Department of Computer Science
        \n University of Delhi</string>
    <string name="made_with_love_by_ducs_developers">    Made With Love\nBy DUCS Developers</string>
    <string name="about_the_department">About the Department</string>
    <string name="about_description"> The Department of Computer Science was established in the year 1981 with the objective of imparting quality education in the field of Computer Science.
        The Department has modern facilities for teaching, learning and research. The Department offers a wide array of research opportunities and programs of study at undergraduate and postgraduate level.\n
        \nThe Department started 3-year Master of Computer Applications (MCA) programme in the year 1982, which was among the first such programmes in India.\n
        \nThe Department started 2-year M.Sc. Computer Science programme in the year 2004 with the aim to develop core competence in Computer Science and prepare the students to carry out development work, as well as take up challenges in research.\n
        \n\nBesides these, the Department offers Doctor of Philosophy (Ph.D.) in Computer Science aimed at producing quality researchers and high-impact interdisciplinary research.\n
        Undergraduate CBCS programmes - B.Sc. (H) Computer Science, B.Sc. Physical / Mathematical Sciences and B.A. Programme (Discipline Courses in Computer Applications) are offered by the University of Delhi through its constituent colleges.\n
        With rapidly evolving technology and the continuous need for innovation, the Department has produced quality professionals holding important positions in the IT industry in India and abroad.
    </string>
    <string name="dummy_title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Neque sed egestas aliquam</string>
    <string name="dummy_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Porta quis mauris metus, vel ut amet sed nunc. Facilisis est sit volutpat hac platea purus elementum, id. Aliquam morbi lobortis augue viverra. Eget velit venenatis tortor purus rhoncus metus.Eu suspendisse libero potenti nunc aliquam. Ac fermentum et viverra tellus risus, nunc. Ultrices sed venenatis eget dui mauris nulla quis fermentum. Mattis ac arcu tristique praesent cum feugiat gravida et ut. Egestas ullamcorper mauris fringilla et interdum feugiat pretium erat volutpat. Tristique purus morbi non pharetra orci. Vitae, risus mauris pretium tortor in consectetur. Tellus sem lectus dui orci facilisis amet.</string>
    <string name="dummy_author">Rishi Sharma</string>
    <string name="dummy_email">rishi.sharma@gmail.com</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="no_messages_found">No Messages Found!</string>
    <string name="tap_the_icon_to_create_one">Tap the + Icon to Create One</string>
    <string name="delete_message">delete_message</string>
    <string name="mailto_email">mailto_email</string>
    <string name="message_screen_menu">message screen menu</string>
    <string name="app_logo">app_logo</string>
    <string name="department_of_computer_science_university_of_delhi">Department of Computer Science\n University of Delhi</string>
    <string name="with_ducs_domain_email">With DUCS Domain Email</string>
    <string name="gdsc_logo">gdsc_logo</string>
    <string name="confirm_send_dialog_msg">"Are you sure you want to send the message ?"</string>
    <string name="google_developer_student_club">Google Developer Student Club</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_please_wait">Loading…\nPlease Wait</string>
</resources>